tests/snapshots/snapshots__budget_mdbook_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (958 words)

README.md
     1→# mdBook …
    14→## License …
crates/mdbook-compare/README.md
     1→# mdbook-compare …
crates/mdbook-compare/src/main.rs
     6→macro_rules! error {
crates/mdbook-core/README.md
     1→# mdbook-core …
    11→## License …
crates/mdbook-core/src/book.rs
   245→    type Target = Vec<u32>;
   274→    type Item = &'a BookItem;
crates/mdbook-core/src/config.rs
    91→    type Err = Error;
   718→trait Updateable<'de>: Serialize + Deserialize<'de> {
crates/mdbook-core/src/lib.rs
     3→/// The current version of `mdbook`.
     4→///
      →…
     7→pub const MDBOOK_VERSION: &str = env!("CARGO_PKG_VERSION");
     9→pub mod book;
    10→pub mod config;
    11→pub mod utils;
    13→/// The error types used in mdbook.
    14→pub mod errors {
    15→    pub use anyhow::{Error, Result};
    16→}
crates/mdbook-core/src/utils/fs.rs
   155→fn copy …
crates/mdbook-core/src/utils/mod.rs
     7→pub mod fs;
    17→macro_rules! static_regex {
crates/mdbook-core/src/utils/toml_ext.rs
     6→pub(crate) trait TomlExt {
     7→    /// Read a dotted key.
crates/mdbook-driver/README.md
     1→# mdbook-driver …
    11→## License …
crates/mdbook-driver/src/builtin_preprocessors/cmd.rs
    14→pub struct CmdPreprocessor {
    15→    name: String,
    16→    cmd: String,
    17→    root: PathBuf,
    18→    optional: bool,
    19→}
crates/mdbook-driver/src/builtin_preprocessors/index.rs
    12→pub struct IndexPreprocessor;
    16→    pub const NAME: &'static str = "index";
crates/mdbook-driver/src/builtin_preprocessors/links.rs
    32→pub struct LinkPreprocessor;
    36→    pub const NAME: &'static str = "links";
   398→struct LinkIter<'a>(CaptureMatches<'a, 'a>);
   401→    type Item = Link<'a>;
crates/mdbook-driver/src/builtin_renderers/markdown_renderer.rs
    10→pub struct MarkdownRenderer;
    14→    pub fn new() -> Self {
crates/mdbook-driver/src/builtin_renderers/mod.rs
    13→mod markdown_renderer;
    20→pub struct CmdRenderer {
    21→    name: String,
    22→    cmd: String,
    23→}
    27→    pub fn new(name: String, cmd: String) -> CmdRenderer {
crates/mdbook-driver/src/init.rs
    13→pub struct BookBuilder {
    14→    root: PathBuf,
    15→    create_gitignore: bool,
    16→    config: Config,
      →…
    20→impl BookBuilder {
crates/mdbook-driver/src/lib.rs
     1→//! High-level library for running mdBook.
     2→//!
      →…
    67→pub mod builtin_preprocessors;
    68→pub mod builtin_renderers;
    69→pub mod init;
    70→mod load;
    71→mod mdbook;
crates/mdbook-driver/src/mdbook/tests.rs
   225→struct BoolPreprocessor(bool);
crates/mdbook-driver/src/mdbook.rs
    29→pub struct MDBook {
    30→    /// The book's root directory.
    31→    pub root: PathBuf,
    32→
      →…
    46→impl MDBook {
   397→struct OutputConfig {
   426→const DEFAULT_PREPROCESSORS: &[&str] = &["links", "index"];
   435→struct PreprocessorConfig {
crates/mdbook-html/README.md
     1→# mdbook-html …
    11→## License …
crates/mdbook-html/src/html/tokenizer.rs
    22→    type Handle = ();
crates/mdbook-html/src/html/tree.rs
    25→macro_rules! attr_qual_name {
   126→type Attributes = IndexMap<QualName, StrTendril>;
crates/mdbook-html/src/html_handlebars/hbs_renderer.rs
    22→pub struct HtmlHandlebars;
   649→type CombinedRedirects …
crates/mdbook-html/src/html_handlebars/helpers/resources.rs
    10→#[derive(Clone)]
    11→pub(crate) struct ResourceHelper {
    12→    pub hash_map: HashMap<String, String>,
    13→}
crates/mdbook-html/src/html_handlebars/helpers/toc.rs
    10→#[derive(Clone, Copy)]
    11→pub(crate) struct RenderToc {
    12→    pub no_section_label: bool,
    13→}
crates/mdbook-html/src/html_handlebars/mod.rs
     4→mod search;
crates/mdbook-html/src/html_handlebars/static_files.rs
    22→pub(super) struct StaticFiles {
    23→    static_files: Vec<StaticFile>,
    24→    hash_map: HashMap<String, String>,
    25→}
crates/mdbook-html/src/lib.rs
     1→//! mdBook HTML renderer.
     2→
     3→mod html;
     4→mod html_handlebars;
     5→pub mod theme;
     6→pub(crate) mod utils;
crates/mdbook-html/src/theme/mod.rs
     9→pub(crate) mod fonts;
    10→pub(crate) mod playground_editor;
    11→#[cfg(feature = "search")]
    12→pub(crate) mod searcher;
    40→pub struct Theme {
    41→    pub(crate) index: Vec<u8>,
    42→    pub(crate) head: Vec<u8>,
      →…
    66→    pub fn new<P: AsRef<Path>>(theme_dir: P) -> Self {
   166→    pub fn copy_theme(html_config: &HtmlConfig, root: &Path) -> Result<()> {
   201→    fn default() -> Theme {
   229→fn load_file_contents …
crates/mdbook-html/src/theme/playground_editor.rs
     3→pub(crate) static JS: &[u8] = include_bytes!("../../front-end/playground_editor/editor.js");
crates/mdbook-html/src/theme/searcher.rs
     4→pub(crate) static JS: &[u8] = include_bytes!("../../front-end/searcher/searcher.js");
crates/mdbook-html/src/utils.rs
     7→pub(crate) fn normalize_path(path: &Path) -> PathBuf {
    42→pub(crate) trait ToUrlPath {
    43→    fn to_url_path(&self) -> String;
    44→}
    46→impl ToUrlPath for Path {
    47→    fn to_url_path(&self) -> String {
    58→pub(crate) fn unique_id(id: &str, used: &mut HashSet<String>) -> String {
    76→pub(crate) fn id_from_content(content: &str) -> String {
crates/mdbook-markdown/README.md
     1→# mdbook-markdown …
    11→## License …
crates/mdbook-markdown/src/lib.rs
    15→pub struct MarkdownOptions {
    16→    /// Enables smart punctuation.
    17→    ///
      →…
    33→impl Default for MarkdownOptions {
    34→    fn default() -> MarkdownOptions {
    43→/// Creates a new pulldown-cmark parser of the given text.
    44→pub fn new_cmark_parser<'text>(text: &'text str, options: &MarkdownOptions) -> Parser<'text> {
crates/mdbook-preprocessor/README.md
     1→# mdbook-preprocessor …
    11→## License …
crates/mdbook-preprocessor/src/lib.rs
    30→pub trait Preprocessor {
    32→    fn name …
    36→    fn run …
    42→    fn supports_renderer …
    51→pub struct PreprocessorContext {
    68→impl PreprocessorContext {
    70→    pub fn new …
    82→pub fn parse_input …
crates/mdbook-renderer/README.md
     1→# mdbook-renderer …
    11→## License …
crates/mdbook-renderer/src/lib.rs
    28→pub trait Renderer {
    40→pub struct RenderContext {
    63→impl RenderContext {
crates/mdbook-summary/README.md
     1→# mdbook-summary …
    11→## License …
crates/mdbook-summary/src/lib.rs
    59→pub fn parse_summary(summary: &str) -> Result<Summary> {
    67→pub struct Summary {
    84→pub struct Link {
    98→    pub fn new<S: Into<String>, P: AsRef<Path>>(name: S, location: P) -> Link {
   109→    fn default() -> Self {
   122→pub enum SummaryItem {
   141→    fn from(other: Link) -> SummaryItem {
   173→struct SummaryParser<'a> {
   190→macro_rules! collect_events {
crates/xtask/README.md
     1→# xtask …
crates/xtask/src/changelog.rs
    10→pub(crate) fn changelog() -> Result<()> {
crates/xtask/src/main.rs
     9→mod changelog;
eslint.config.mjs
     4→const handlebarsPreprocessor = {
     7→            preprocess(text, filename) {
    16→            postprocess(messages, filename) {
guide/guide-helper/src/lib.rs
     9→/// Preprocessing entry point.
    10→pub fn handle_preprocessing() -> Result<()> {
    33→struct GuideHelper;
    35→impl Preprocessor for GuideHelper {
    36→    fn name …
    40→    fn run …
    46→fn insert_version(book: &mut Book) {
guide/guide-helper/src/main.rs
     3→fn main() {
guide/src/README.md
     1→# Introduction …
    46→## Contributing …
    55→## License …
guide/src/cli/README.md
     1→# Command-line tool …
guide/src/for_developers/README.md
     1→# For developers …
    17→## The build process …
    30→## Using `mdbook` as a library …
guide/src/for_developers/mdbook-wordcount/src/main.rs
    44→#[derive(Debug, Default, Serialize, Deserialize)]
    45→#[serde(default, rename_all = "kebab-case")]
    46→pub struct WordcountConfig {
    47→    pub ignores: Vec<String>,
    48→    pub deny_odds: bool,
    49→}
guide/src/format/README.md
     1→# Format
     3→In this section you will learn how to:
     4→
      →…
guide/src/format/configuration/README.md
     1→# Configuration …
guide/src/format/example.rs
     1→fn main() {
guide/src/format/mdbook.md
     3→## Hiding code lines …
guide/src/format/theme/README.md
     1→# Theme …
guide/src/guide/README.md
     1→# User guide
     3→This user guide provides an introduction to basic concepts of using mdBook.
     4→
     5→- [Installation](installation.md)
      →…
src/cmd/clean.rs
    38→pub fn human_readable_bytes(bytes: u64) -> (f32, &'static str) {
    45→#[derive(Debug)]
    46→pub struct Clean {
    47→    num_files_removed: u64,
    48→    num_dirs_removed: u64,
    49→    total_bytes_removed: u64,
    50→}
src/cmd/command_prelude.rs
     7→pub trait CommandExt: Sized {
     8→    fn _arg(self, arg: Arg) -> Self;
     9→
    42→    fn arg_watcher(self) -> Self {
src/cmd/mod.rs
     1→//! Subcommand modules for the `mdbook` binary.
     2→
     3→pub mod build;
     4→pub mod clean;
     5→pub mod command_prelude;
     6→pub mod init;
     7→#[cfg(feature = "serve")]
     8→pub mod serve;
     9→pub mod test;
    10→#[cfg(feature = "watch")]
    11→pub mod watch;
src/cmd/serve.rs
    20→const LIVE_RELOAD_ENDPOINT: &str = "__livereload";
src/cmd/watch/native.rs
    11→pub fn rebuild_on_change …
src/cmd/watch/poller.rs
    18→pub fn rebuild_on_change(
    19→    book_dir: &Path,
    20→    update_config: &dyn Fn(&mut MDBook),
    21→    post_build: &dyn Fn(),
    22→) {
    78→struct PathData {
    86→struct Watcher {
    95→impl Watcher {
src/cmd/watch.rs
     8→mod native;
     9→mod poller;
    21→pub enum WatcherKind {
    22→    Poll,
    23→    Native,
      →…
src/main.rs
    14→mod cmd;
    16→const VERSION: &str = concat!("v", clap::crate_version!());
    58→fn create_clap_command() -> Command {
