tests/snapshots/snapshots__budget_mdbook_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (1935 words)

README.md
     1→# mdBook …
    14→## License …
crates/mdbook-compare/README.md
     1→# mdbook-compare
     3→This is a simple utility to compare the output of two different versions of mdbook.
     4→
     5→To use this:
     6→
     7→1. Install [`tidy`](https://www.html-tidy.org/).
      →…
crates/mdbook-compare/src/main.rs
     6→macro_rules! error {
crates/mdbook-core/README.md
     1→# mdbook-core …
    11→## License …
crates/mdbook-core/src/book.rs
    99→fn for_each_mut …
   245→    type Target = Vec<u32>;
   274→    type Item = &'a BookItem;
crates/mdbook-core/src/config.rs
    81→fn is_default …
    86→fn toml_is_empty …
    91→    type Err = Error;
   308→fn parse_env …
   336→fn is_default_src …
   718→trait Updateable<'de>: Serialize + Deserialize<'de> {
crates/mdbook-core/src/lib.rs
     3→/// The current version of `mdbook`.
     4→///
      →…
     7→pub const MDBOOK_VERSION: &str = env!("CARGO_PKG_VERSION");
     9→pub mod book;
    10→pub mod config;
    11→pub mod utils;
    13→/// The error types used in mdbook.
    14→pub mod errors {
    15→    pub use anyhow::{Error, Result};
    16→}
crates/mdbook-core/src/utils/fs.rs
   155→fn copy …
crates/mdbook-core/src/utils/mod.rs
     7→pub mod fs;
     8→mod html;
     9→mod toml_ext;
    17→macro_rules! static_regex {
crates/mdbook-core/src/utils/toml_ext.rs
     5→/// Helper for working with toml types.
     6→pub(crate) trait TomlExt {
     7→    /// Read a dotted key.
     8→    fn read(&self, key: &str) -> Option<&Value>;
     9→    /// Insert with a dotted key.
    10→    fn insert(&mut self, key: &str, value: Value);
    11→}
    13→impl TomlExt for Value {
    14→    fn read(&self, key: &str) -> Option<&Value> {
    22→    fn insert(&mut self, key: &str, value: Value) {
    40→fn split …
crates/mdbook-driver/README.md
     1→# mdbook-driver …
    11→## License …
crates/mdbook-driver/src/builtin_preprocessors/cmd.rs
    14→pub struct CmdPreprocessor {
    15→    name: String,
    16→    cmd: String,
    17→    root: PathBuf,
    18→    optional: bool,
    19→}
    23→    pub fn new(name: String, cmd: String, root: PathBuf, optional: bool) -> CmdPreprocessor {
    52→    pub fn cmd(&self) -> &str {
crates/mdbook-driver/src/builtin_preprocessors/index.rs
    12→pub struct IndexPreprocessor;
    15→    /// Name of this preprocessor.
    16→    pub const NAME: &'static str = "index";
    19→    pub fn new() -> Self {
crates/mdbook-driver/src/builtin_preprocessors/links/take_lines.rs
     6→pub(super) fn take_lines …
    31→pub(super) fn take_anchored_lines …
    63→pub(super) fn take_rustdoc_include_lines …
    81→pub(super) fn take_rustdoc_include_anchored_lines …
crates/mdbook-driver/src/builtin_preprocessors/links.rs
    32→pub struct LinkPreprocessor;
    35→    /// Name of this preprocessor.
    36→    pub const NAME: &'static str = "links";
    39→    pub fn new() -> Self {
   139→enum LinkType<'a> {
   148→enum RangeOrAnchor {
   155→enum LineRange {
   275→struct Link<'a> {
   398→struct LinkIter<'a>(CaptureMatches<'a, 'a>);
   401→    type Item = Link<'a>;
crates/mdbook-driver/src/builtin_renderers/markdown_renderer.rs
    10→pub struct MarkdownRenderer;
    14→    pub fn new() -> Self {
crates/mdbook-driver/src/builtin_renderers/mod.rs
    13→mod markdown_renderer;
    20→pub struct CmdRenderer {
    21→    name: String,
    22→    cmd: String,
    23→}
    27→    pub fn new(name: String, cmd: String) -> CmdRenderer {
crates/mdbook-driver/src/init.rs
    13→pub struct BookBuilder {
    14→    root: PathBuf,
    15→    create_gitignore: bool,
    16→    config: Config,
      →…
    20→impl BookBuilder {
crates/mdbook-driver/src/lib.rs
     1→//! High-level library for running mdBook.
     2→//!
     3→//! This is the high-level library for running
     4→//! [mdBook](https://rust-lang.github.io/mdBook/). There are several
      →…
    67→pub mod builtin_preprocessors;
    68→pub mod builtin_renderers;
    69→pub mod init;
    70→mod load;
    71→mod mdbook;
crates/mdbook-driver/src/mdbook/tests.rs
   225→struct BoolPreprocessor(bool);
   226→impl Preprocessor for BoolPreprocessor {
   227→    fn name …
   231→    fn run …
   235→    fn supports_renderer …
crates/mdbook-driver/src/mdbook.rs
    29→pub struct MDBook {
    30→    /// The book's root directory.
    31→    pub root: PathBuf,
    32→
      →…
    46→impl MDBook {
   397→struct OutputConfig {
   398→    command: Option<String>,
   399→}
   426→const DEFAULT_PREPROCESSORS: &[&str] = &["links", "index"];
   435→struct PreprocessorConfig {
   436→    command: Option<String>,
   437→    #[serde(default)]
      →…
crates/mdbook-html/README.md
     1→# mdbook-html …
    11→## License …
crates/mdbook-html/front-end/js/book.js
     9→function playground_text(playground, hidden = true) {
crates/mdbook-html/src/html/mod.rs
    34→pub(crate) struct HtmlRenderOptions<'a> {
    80→pub(crate) struct ChapterTree<'book> {
crates/mdbook-html/src/html/tokenizer.rs
    16→struct TokenCollector {
    22→    type Handle = ();
crates/mdbook-html/src/html/tree.rs
    25→macro_rules! attr_qual_name {
    33→pub(crate) enum Node {
    73→pub(crate) struct Element {
   126→type Attributes = IndexMap<QualName, StrTendril>;
   129→trait ToTendril {
   150→enum TableState {
   160→pub(crate) struct MarkdownTreeBuilder<'opts, 'event, EventIter> {
crates/mdbook-html/src/html_handlebars/hbs_renderer.rs
    22→pub struct HtmlHandlebars;
    26→    pub fn new() -> Self {
   633→struct RenderChapterContext<'a> {
   642→/// Redirect mapping.
   643→///
      →…
   649→type CombinedRedirects = BTreeMap<String, (String, BTreeMap<String, String>)>;
crates/mdbook-html/src/html_handlebars/helpers/mod.rs
     1→pub(crate) mod fontawesome;
     2→pub(crate) mod resources;
     3→pub(crate) mod toc;
crates/mdbook-html/src/html_handlebars/helpers/resources.rs
    10→#[derive(Clone)]
    11→pub(crate) struct ResourceHelper {
    12→    pub hash_map: HashMap<String, String>,
    13→}
crates/mdbook-html/src/html_handlebars/helpers/toc.rs
    10→#[derive(Clone, Copy)]
    11→pub(crate) struct RenderToc {
    12→    pub no_section_label: bool,
    13→}
   177→fn write_li_open_tag …
crates/mdbook-html/src/html_handlebars/mod.rs
     3→#[cfg(feature = "search")]
     4→mod search;
crates/mdbook-html/src/html_handlebars/search.rs
    17→const MAX_WORD_LENGTH_TO_INDEX: usize = 80;
    29→pub(super) fn create_files(
    30→    search_config: &Search,
    31→    static_files: &mut StaticFiles,
    32→    chapter_trees: &[ChapterTree<'_>],
    33→) -> Result<()> {
crates/mdbook-html/src/html_handlebars/static_files.rs
    22→pub(super) struct StaticFiles {
    23→    static_files: Vec<StaticFile>,
    24→    hash_map: HashMap<String, String>,
    25→}
    27→enum StaticFile {
   138→    pub(super) fn hash_files(&mut self) -> Result<()> {
crates/mdbook-html/src/lib.rs
     1→//! mdBook HTML renderer.
     2→
     3→mod html;
     4→mod html_handlebars;
     5→pub mod theme;
     6→pub(crate) mod utils;
crates/mdbook-html/src/theme/mod.rs
     9→pub(crate) mod fonts;
    10→pub(crate) mod playground_editor;
    11→#[cfg(feature = "search")]
    12→pub(crate) mod searcher;
    40→pub struct Theme {
    41→    pub(crate) index: Vec<u8>,
    42→    pub(crate) head: Vec<u8>,
    43→    pub(crate) redirect: Vec<u8>,
    44→    pub(crate) header: Vec<u8>,
      →…
    66→    pub fn new<P: AsRef<Path>>(theme_dir: P) -> Self {
   166→    pub fn copy_theme(html_config: &HtmlConfig, root: &Path) -> Result<()> {
   201→    fn default() -> Theme {
   229→fn load_file_contents …
crates/mdbook-html/src/theme/playground_editor.rs
     3→pub(crate) static JS: &[u8] = include_bytes!("../../front-end/playground_editor/editor.js");
crates/mdbook-html/src/theme/searcher.rs
     4→pub(crate) static JS: &[u8] = include_bytes!("../../front-end/searcher/searcher.js");
crates/mdbook-html/src/utils.rs
     6→/// Utility function to normalize path elements like `..`.
     7→pub(crate) fn normalize_path(path: &Path) -> PathBuf {
    41→/// Helper trait for converting a [`Path`] to a string suitable for an HTML path.
    42→pub(crate) trait ToUrlPath {
    43→    fn to_url_path(&self) -> String;
    44→}
    46→impl ToUrlPath for Path {
    47→    fn to_url_path(&self) -> String {
    54→/// Make sure an HTML id is unique.
    55→///
      →…
    58→pub(crate) fn unique_id(id: &str, used: &mut HashSet<String>) -> String {
    75→/// Generates an HTML id from the given text.
    76→pub(crate) fn id_from_content(content: &str) -> String {
crates/mdbook-markdown/README.md
     1→# mdbook-markdown …
    11→## License …
crates/mdbook-markdown/src/lib.rs
    13→/// Options for parsing markdown.
    14→#[non_exhaustive]
    15→pub struct MarkdownOptions {
    16→    /// Enables smart punctuation.
    17→    ///
    18→    /// Converts quotes to curly quotes, `...` to `…`, `--` to en-dash, and
    19→    /// `---` to em-dash.
    20→    ///
    21→    /// This is `true` by default.
    22→    pub smart_punctuation: bool,
    23→    /// Enables definition lists.
    24→    ///
    25→    /// This is `true` by default.
    26→    pub definition_lists: bool,
    27→    /// Enables admonitions.
    28→    ///
    29→    /// This is `true` by default.
    30→    pub admonitions: bool,
    31→}
    33→impl Default for MarkdownOptions {
    34→    fn default() -> MarkdownOptions {
    35→        MarkdownOptions {
      →…
    43→/// Creates a new pulldown-cmark parser of the given text.
    44→pub fn new_cmark_parser<'text>(text: &'text str, options: &MarkdownOptions) -> Parser<'text> {
    45→    let mut opts = Options::empty();
    46→    opts.insert(Options::ENABLE_TABLES);
    47→    opts.insert(Options::ENABLE_FOOTNOTES);
    48→    opts.insert(Options::ENABLE_STRIKETHROUGH);
    49→    opts.insert(Options::ENABLE_TASKLISTS);
      →…
crates/mdbook-preprocessor/README.md
     1→# mdbook-preprocessor
     7→This is the Rust library to implement a [preprocessor](https://rust-lang.github.io/mdBook/for_developers/preprocessors.html) for [mdBook](https://rust-lang.github.io/mdBook/).
     8→
      →…
    11→## License
    13→[Mozilla Public License, version 2.0](https://github.com/rust-lang/mdBook/blob/master/LICENSE)
crates/mdbook-preprocessor/src/lib.rs
    30→pub trait Preprocessor {
    31→    /// Get the `Preprocessor`'s name.
    32→    fn name(&self) -> &str;
    33→
    36→    fn run(&self, ctx: &PreprocessorContext, book: Book) -> Result<Book>;
    42→    fn supports_renderer(&self, _renderer: &str) -> Result<bool> {
    51→pub struct PreprocessorContext {
    52→    /// The location of the book directory on disk.
    53→    pub root: PathBuf,
    54→    /// The book configuration (`book.toml`).
      →…
    68→impl PreprocessorContext {
    70→    pub fn new(root: PathBuf, config: Config, renderer: String) -> Self {
    82→pub fn parse_input<R: Read>(reader: R) -> Result<(PreprocessorContext, Book)> {
crates/mdbook-renderer/README.md
     1→# mdbook-renderer
     7→This is the Rust library to implement a [renderer](https://rust-lang.github.io/mdBook/for_developers/backends.html) for [mdBook](https://rust-lang.github.io/mdBook/).
     8→
      →…
    11→## License
    13→[Mozilla Public License, version 2.0](https://github.com/rust-lang/mdBook/blob/master/LICENSE)
crates/mdbook-renderer/src/lib.rs
    28→pub trait Renderer {
    29→    /// The `Renderer`'s name.
    30→    fn name(&self) -> &str;
    34→    fn render(&self, ctx: &RenderContext) -> Result<()>;
    40→pub struct RenderContext {
    41→    /// Which version of `mdbook` did this come from (as written in `mdbook`'s
      →…
    63→impl RenderContext {
    65→    pub fn new<P, Q>(root: P, book: Book, config: Config, destination: Q) -> RenderContext
    66→    where
    67→        P: Into<PathBuf>,
    68→        Q: Into<PathBuf>,
    69→    {
    81→    pub fn source_dir(&self) -> PathBuf {
    86→    pub fn from_json<R: Read>(reader: R) -> Result<RenderContext> {
crates/mdbook-summary/README.md
     1→# mdbook-summary
     7→This is the Rust library used to parse the [`SUMMARY.md`](https://rust-lang.github.io/mdBook/format/summary.html) file structure for [mdBook](https://rust-lang.github.io/mdBook/).
     8→
      →…
    11→## License
    13→[Mozilla Public License, version 2.0](https://github.com/rust-lang/mdBook/blob/master/LICENSE)
crates/mdbook-summary/src/lib.rs
    17→/// Parse the text from a `SUMMARY.md` file into a sort of "recipe" to be
    18→/// used when loading a book from disk.
    19→///
    20→/// # Summary Format
    21→///
      →…
    59→pub fn parse_summary(summary: &str) -> Result<Summary> {
    67→pub struct Summary {
    68→    /// An optional title for the `SUMMARY.md`, currently just ignored.
    69→    pub title: Option<String>,
      →…
    84→pub struct Link {
    85→    /// The name of the chapter.
    86→    pub name: String,
      →…
    97→    /// Create a new link with no nested items.
    98→    pub fn new<S: Into<String>, P: AsRef<Path>>(name: S, location: P) -> Link {
   109→    fn default() -> Self {
   122→pub enum SummaryItem {
   123→    /// A link to a chapter.
   124→    Link(Link),
      →…
   141→    fn from(other: Link) -> SummaryItem {
   173→struct SummaryParser<'a> {
   174→    src: &'a str,
   175→    stream: pulldown_cmark::OffsetIter<'a, DefaultBrokenLinkCallback>,
   176→    offset: usize,
   177→
      →…
   190→macro_rules! collect_events {
crates/xtask/README.md
     1→# xtask
     3→This is a CLI utility for running development commands for mdbook.
     4→See [CONTRIBUTING.md](../../CONTRIBUTING.md) for how to use this.
crates/xtask/src/changelog.rs
     8→const CHANGELOG_PATH …
    10→pub(crate) fn changelog() -> Result<()> {
crates/xtask/src/main.rs
     9→mod changelog;
    11→type Result …
eslint.config.mjs
     4→const handlebarsPreprocessor = {
     7→            preprocess(text, filename) {
    16→            postprocess(messages, filename) {
guide/guide-helper/src/lib.rs
     9→/// Preprocessing entry point.
    10→pub fn handle_preprocessing() -> Result<()> {
    11→    let pre = GuideHelper;
    12→    let (ctx, book) = mdbook_preprocessor::parse_input(io::stdin())?;
    13→
      →…
    33→struct GuideHelper;
    35→impl Preprocessor for GuideHelper {
    36→    fn name(&self) -> &str {
    40→    fn run(&self, _ctx: &PreprocessorContext, mut book: Book) -> Result<Book> {
    46→fn insert_version(book: &mut Book) {
guide/guide-helper/src/main.rs
     1→//! Preprocessor for the mdBook guide.
     2→
     3→fn main() {
guide/src/README.md
     1→# Introduction …
    46→## Contributing …
    55→## License …
guide/src/cli/README.md
     1→# Command-line tool
     3→The `mdbook` command-line tool is used to create and build books.
      →…
guide/src/for_developers/README.md
     1→# For developers …
    17→## The build process …
    30→## Using `mdbook` as a library …
guide/src/for_developers/mdbook-wordcount/src/main.rs
    44→#[derive(Debug, Default, Serialize, Deserialize)]
    45→#[serde(default, rename_all = "kebab-case")]
    46→pub struct WordcountConfig {
    47→    pub ignores: Vec<String>,
    48→    pub deny_odds: bool,
    49→}
guide/src/format/README.md
     1→# Format
     3→In this section you will learn how to:
     4→
     5→- Structure your book correctly
      →…
guide/src/format/configuration/README.md
     1→# Configuration …
guide/src/format/example.rs
     1→fn main() {
guide/src/format/mdbook.md
     3→## Hiding code lines
     5→There is a feature in mdBook that lets you hide code lines by prepending them with a specific prefix.
     6→
      →…
guide/src/format/theme/README.md
     1→# Theme
     3→The default renderer uses a [handlebars](https://handlebarsjs.com) template to
      →…
guide/src/guide/README.md
     1→# User guide
     3→This user guide provides an introduction to basic concepts of using mdBook.
     4→
     5→- [Installation](installation.md)
     6→- [Reading Books](reading.md)
     7→- [Creating a Book](creating.md)
guide/src/misc/contributors.md
     1→# Contributors
     3→Here is a list of the contributors who have helped improving mdBook. Big
     4→shout-out to them!
     5→
     6→- [mdinger](https://github.com/mdinger)
      →…
src/cmd/clean.rs
    36→/// Formats a number of bytes into a human readable SI-prefixed size.
    37→/// Returns a tuple of `(quantity, units)`.
    38→pub fn human_readable_bytes(bytes: u64) -> (f32, &'static str) {
    45→#[derive(Debug)]
    46→pub struct Clean {
    47→    num_files_removed: u64,
    48→    num_dirs_removed: u64,
    49→    total_bytes_removed: u64,
    50→}
src/cmd/command_prelude.rs
     7→pub trait CommandExt: Sized {
     8→    fn _arg(self, arg: Arg) -> Self;
     9→
    10→    fn arg_dest_dir(self) -> Self {
    11→        self._arg(
    12→            Arg::new("dest-dir")
    13→                .short('d')
    14→                .long("dest-dir")
    41→    #[cfg(any(feature = "watch", feature = "serve"))]
    42→    fn arg_watcher(self) -> Self {
src/cmd/init.rs
    88→fn get_author_name …
   102→fn request_book_title …
src/cmd/mod.rs
     1→//! Subcommand modules for the `mdbook` binary.
     2→
     3→pub mod build;
     4→pub mod clean;
     5→pub mod command_prelude;
     6→pub mod init;
     7→#[cfg(feature = "serve")]
     8→pub mod serve;
     9→pub mod test;
    10→#[cfg(feature = "watch")]
    11→pub mod watch;
src/cmd/serve.rs
    20→const LIVE_RELOAD_ENDPOINT: &str = "__livereload";
   109→async fn serve …
src/cmd/watch/native.rs
    11→pub fn rebuild_on_change(
    12→    book_dir: &Path,
    13→    update_config: &dyn Fn(&mut MDBook),
    14→    post_build: &dyn Fn(),
    15→) {
    16→    use notify::RecursiveMode::*;
    17→
      →…
src/cmd/watch/poller.rs
    17→/// Calls the closure when a book source file is changed, blocking indefinitely.
    18→pub fn rebuild_on_change(
    19→    book_dir: &Path,
    20→    update_config: &dyn Fn(&mut MDBook),
    21→    post_build: &dyn Fn(),
    22→) {
    23→    let mut book = MDBook::load(book_dir).unwrap_or_else(|e| {
    24→        error!("failed to load book: {e}");
    25→        std::process::exit(1);
    26→    });
    27→
      →…
    78→struct PathData {
    86→struct Watcher {
    95→impl Watcher {
   124→    fn set_roots(&mut self, book: &MDBook) {
   153→    fn scan(&mut self) -> Vec<PathBuf> {
src/cmd/watch.rs
     8→mod native;
     9→mod poller;
    21→pub enum WatcherKind {
    22→    Poll,
    23→    Native,
    24→}
src/main.rs
    14→mod cmd;
    16→const VERSION: &str = concat!("v", clap::crate_version!());
    57→/// Create a list of valid arguments and sub-commands
    58→fn create_clap_command() -> Command {
